replaced favicon, made modals fade, fixed alignment issues with modal sections, changed text a little bit

--- a/css/styles.css
+++ b/css/styles.css
@@ -422,7 +422,7 @@ a:hover {
   font-size: 1.2rem;
 }
 
-.button-rouded {
+.button-rounded {
   border-radius: 5rem;
 }
 
